[gd_scene load_steps=65 format=2]

[ext_resource path="res://sprite cinza/cadeira cinza.png" type="Texture" id=1]
[ext_resource path="res://sprite cinza/porta cinza.png" type="Texture" id=2]
[ext_resource path="res://sprite cinza/relogio.png" type="Texture" id=3]
[ext_resource path="res://cena.gd" type="Script" id=4]
[ext_resource path="res://sprites cor/nuvem contorno.png" type="Texture" id=5]
[ext_resource path="res://sprite cinza/parede cinza.png" type="Texture" id=6]
[ext_resource path="res://sprites cor/nuvem preenchida.png" type="Texture" id=7]
[ext_resource path="res://sprites cor/spritenovo.png" type="Texture" id=8]
[ext_resource path="res://sprites cor/vidas.png" type="Texture" id=9]
[ext_resource path="res://perdeu.tscn" type="PackedScene" id=11]
[ext_resource path="res://sprite cinza/estante.png" type="Texture" id=12]
[ext_resource path="res://sprite cinza/Mesa cinza.png" type="Texture" id=13]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=42]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxEmpty" id=29]

[sub_resource type="StyleBoxEmpty" id=30]

[sub_resource type="StyleBoxEmpty" id=31]

[sub_resource type="StyleBoxEmpty" id=32]

[sub_resource type="StyleBoxEmpty" id=33]

[sub_resource type="StyleBoxEmpty" id=34]

[sub_resource type="StyleBoxEmpty" id=35]

[sub_resource type="StyleBoxEmpty" id=36]

[sub_resource type="StyleBoxEmpty" id=37]

[sub_resource type="StyleBoxEmpty" id=38]

[sub_resource type="StyleBoxEmpty" id=39]

[sub_resource type="StyleBoxEmpty" id=40]

[sub_resource type="StyleBoxEmpty" id=41]

[sub_resource type="StyleBoxEmpty" id=43]

[sub_resource type="StyleBoxEmpty" id=44]

[sub_resource type="StyleBoxEmpty" id=45]

[sub_resource type="StyleBoxEmpty" id=46]

[sub_resource type="StyleBoxEmpty" id=47]

[sub_resource type="StyleBoxEmpty" id=48]

[sub_resource type="StyleBoxEmpty" id=49]

[sub_resource type="StyleBoxEmpty" id=50]

[sub_resource type="StyleBoxEmpty" id=51]

[sub_resource type="StyleBoxEmpty" id=52]

[sub_resource type="StyleBoxEmpty" id=53]

[sub_resource type="StyleBoxEmpty" id=54]

[sub_resource type="StyleBoxEmpty" id=55]

[sub_resource type="StyleBoxEmpty" id=56]

[sub_resource type="StyleBoxEmpty" id=57]

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 272, 625 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 272, 0, 272, 625 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 272, 625 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 272, 625 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ) ],
"loop": true,
"name": "New Anim",
"speed": 10.0
} ]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.498039 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="ParedeCinza" type="Sprite" parent="."]
position = Vector2( 534, 300 )
scale = Vector2( 0.888889, 0.888889 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Estante" type="Sprite" parent="."]
position = Vector2( 812, 309 )
scale = Vector2( 0.601655, 0.601655 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="MesaCinza2" type="Sprite" parent="."]
position = Vector2( 489, 505 )
scale = Vector2( 0.199775, 0.199775 )
texture = ExtResource( 13 )

[node name="CadeiraCinza" type="Sprite" parent="."]
position = Vector2( 612, 460 )
scale = Vector2( 0.326779, 0.326779 )
texture = ExtResource( 1 )

[node name="Porta" type="Sprite" parent="."]
position = Vector2( 277, 346 )
texture = ExtResource( 2 )

[node name="Porta" type="TextureButton" parent="Porta"]
margin_left = -97.0
margin_top = -179.0
margin_right = 96.0
margin_bottom = 173.0

[node name="senha1" type="LineEdit" parent="Porta"]
margin_left = -47.0
margin_top = -101.0
margin_right = 73.0
margin_bottom = 39.0
rect_scale = Vector2( 0.1, 0.1 )
max_length = 1

[node name="numero1" type="Label" parent="Porta"]
margin_left = -47.0
margin_top = -101.0
margin_right = -35.0
margin_bottom = -87.0
align = 1
valign = 1

[node name="senha2" type="LineEdit" parent="Porta"]
margin_left = -20.0
margin_top = -101.0
margin_right = 100.0
margin_bottom = 39.0
rect_scale = Vector2( 0.1, 0.1 )
max_length = 1

[node name="numero2" type="Label" parent="Porta"]
margin_left = -20.0
margin_top = -101.0
margin_right = -8.0
margin_bottom = -87.0
align = 1
valign = 1

[node name="senha3" type="LineEdit" parent="Porta"]
margin_left = 6.0
margin_top = -101.0
margin_right = 126.0
margin_bottom = 39.0
rect_scale = Vector2( 0.1, 0.1 )
max_length = 1

[node name="numero3" type="Label" parent="Porta"]
margin_left = 6.0
margin_top = -101.0
margin_right = 18.0
margin_bottom = -87.0
align = 1
valign = 1

[node name="senha4" type="LineEdit" parent="Porta"]
margin_left = 33.0
margin_top = -101.0
margin_right = 153.0
margin_bottom = 39.0
rect_scale = Vector2( 0.1, 0.1 )
max_length = 1

[node name="numero4" type="Label" parent="Porta"]
margin_left = 33.0
margin_top = -101.0
margin_right = 45.0
margin_bottom = -87.0
align = 1
valign = 1

[node name="Retrato2" type="Button" parent="Porta"]
margin_left = 572.0
margin_top = -214.0
margin_right = 608.0
margin_bottom = -165.0
rect_rotation = 13.0209
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 17 )

[node name="Retrato" type="Button" parent="Porta"]
margin_left = 435.0
margin_top = -112.0
margin_right = 478.0
margin_bottom = -53.0
rect_rotation = -10.114
custom_styles/hover = SubResource( 42 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )

[node name="Livro4" type="Button" parent="Porta"]
margin_left = 526.0
margin_top = 16.0
margin_right = 622.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )

[node name="Livro23" type="Button" parent="Porta"]
margin_left = 467.0
margin_top = -39.0
margin_right = 523.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 27 )
custom_styles/pressed = SubResource( 28 )
custom_styles/focus = SubResource( 29 )
custom_styles/disabled = SubResource( 30 )
custom_styles/normal = SubResource( 31 )

[node name="Livro1" type="Button" parent="Porta"]
margin_left = 434.0
margin_top = -35.0
margin_right = 465.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 32 )
custom_styles/pressed = SubResource( 33 )
custom_styles/focus = SubResource( 34 )
custom_styles/disabled = SubResource( 35 )
custom_styles/normal = SubResource( 36 )

[node name="Cadeira" type="Button" parent="Porta"]
margin_left = 276.0
margin_right = 397.0
margin_bottom = 229.0
custom_styles/hover = SubResource( 37 )
custom_styles/pressed = SubResource( 38 )
custom_styles/focus = SubResource( 39 )
custom_styles/disabled = SubResource( 40 )
custom_styles/normal = SubResource( 41 )

[node name="Gaveta1" type="Button" parent="Porta"]
margin_left = 435.0
margin_top = 51.0
margin_right = 623.0
margin_bottom = 75.0
custom_styles/hover = SubResource( 43 )
custom_styles/pressed = SubResource( 44 )
custom_styles/focus = SubResource( 45 )
custom_styles/disabled = SubResource( 46 )
custom_styles/normal = SubResource( 47 )

[node name="Gaveta23" type="Button" parent="Porta"]
margin_left = 435.0
margin_top = 78.0
margin_right = 623.0
margin_bottom = 130.0
custom_styles/hover = SubResource( 48 )
custom_styles/pressed = SubResource( 49 )
custom_styles/focus = SubResource( 50 )
custom_styles/disabled = SubResource( 51 )
custom_styles/normal = SubResource( 52 )

[node name="Gaveta4" type="Button" parent="Porta"]
margin_left = 435.0
margin_top = 135.0
margin_right = 624.0
margin_bottom = 161.0
custom_styles/hover = SubResource( 53 )
custom_styles/pressed = SubResource( 54 )
custom_styles/focus = SubResource( 55 )
custom_styles/disabled = SubResource( 56 )
custom_styles/normal = SubResource( 57 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Vidas" type="Sprite" parent="."]
position = Vector2( 826.047, 26.875 )
scale = Vector2( 0.332464, 0.241428 )
texture = ExtResource( 9 )

[node name="NuvemContorno2" type="Sprite" parent="Vidas"]
position = Vector2( -13.7916, 2.71317 )
scale = Vector2( 0.152799, 0.210415 )
texture = ExtResource( 5 )

[node name="NuvemPreenchida2" type="Sprite" parent="Vidas/NuvemContorno2"]
position = Vector2( 0.000976563, 12.8946 )
scale = Vector2( 0.967391, 0.967391 )
texture = ExtResource( 7 )

[node name="NuvemContorno1" type="Sprite" parent="Vidas"]
position = Vector2( -163.531, 2.71311 )
scale = Vector2( 0.152799, 0.210415 )
texture = ExtResource( 5 )

[node name="NuvemPreenchida1" type="Sprite" parent="Vidas/NuvemContorno1"]
position = Vector2( 2.25098, -6.04395 )
scale = Vector2( 0.967391, 0.967391 )
texture = ExtResource( 7 )

[node name="NuvemContorno3" type="Sprite" parent="Vidas"]
position = Vector2( 134.956, 2.37403 )
scale = Vector2( 0.152799, 0.210415 )
texture = ExtResource( 5 )

[node name="NuvemPreenchida3" type="Sprite" parent="Vidas/NuvemContorno3"]
position = Vector2( 6.49023, 1.61182 )
scale = Vector2( 0.967391, 0.967391 )
texture = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 373, 438 )
scale = Vector2( 0.441839, 0.439974 )
frames = SubResource( 12 )
animation = "New Anim"
frame = 3
playing = true

[node name="Relogio" type="Sprite" parent="."]
position = Vector2( 280, 110 )
scale = Vector2( 0.144323, 0.144323 )
texture = ExtResource( 3 )

[node name="notificacao" type="Label" parent="."]
margin_left = -2.0
margin_top = 550.0
margin_right = 1066.0
margin_bottom = 607.0
theme = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
align = 1
valign = 1

[node name="perdeu" parent="." instance=ExtResource( 11 )]
visible = false

[connection signal="button_down" from="Porta/Porta" to="." method="_on_Porta_button_down"]
[connection signal="button_down" from="Porta/Retrato2" to="." method="_on_Retrato2_button_down"]
[connection signal="button_down" from="Porta/Retrato" to="." method="_on_Retrato_button_down"]
[connection signal="button_down" from="Porta/Livro4" to="." method="_on_Livro4_button_down"]
[connection signal="button_down" from="Porta/Livro23" to="." method="_on_Livro23_button_down"]
[connection signal="button_down" from="Porta/Livro1" to="." method="_on_Livro1_button_down"]
[connection signal="button_down" from="Porta/Cadeira" to="." method="_on_Cadeira_button_down"]
[connection signal="button_down" from="Porta/Gaveta1" to="." method="_on_Gaveta1_button_down"]
[connection signal="button_down" from="Porta/Gaveta23" to="." method="_on_Gaveta2_button_down"]
[connection signal="button_down" from="Porta/Gaveta4" to="." method="_on_Gaveta4_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
